fix: prevent page from overflowing

--- a/app/globals.css
+++ b/app/globals.css
@@ -47,7 +47,12 @@
 }
 
 @layer base {
-	button {
+	html {
+    overflow: hidden;
+    height: 100vh;
+    height: 100dvh;
+  }
+  button {
 		@apply cursor-pointer;
 	}
 }
